--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap-scss": "^4.5.3",
     "browser-sync": "^2.26.13",
     "del": "^6.0.0",
+    "feather-icons": "^4.28.0",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
     "gulp-imagemin": "^7.1.0",
