--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-svg-sprite": "^1.5.0",
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.5.1",
+    "merge-stream": "^2.0.0",
     "node-sass": "^5.0.0",
     "node-sass-package-importer": "^5.3.2",
     "postcss": "^8.1.9",
