--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {},
   "devDependencies": {
     "autoprefixer": "^10.0.2",
+    "bootstrap": "^4.5.3",
     "bootstrap-scss": "^4.5.3",
     "browser-sync": "^2.26.13",
     "del": "^6.0.0",
